const path = require("path")
const setupServer = require("../../../helpers/setup-server")
const { useApi } = require("../../../helpers/use-api")
const { initDb, useDb } = require("../../../helpers/use-db")

const productSeeder = require("../../helpers/product-seeder")
jest.setTimeout(30000)
describe("/store/products", () => {
  let medusaProcess
  let dbConnection

  beforeAll(async () => {
    const cwd = path.resolve(path.join(__dirname, "..", ".."))
    dbConnection = await initDb({ cwd })
    medusaProcess = await setupServer({ cwd })
  })

  afterAll(async () => {
    const db = useDb()
    await db.shutdown()
    medusaProcess.kill()
  })

  describe("List products", () => {
    beforeEach(async () => {
      try {
        await productSeeder(dbConnection)
      } catch (err) {
        console.log(err)
        throw err
      }
    })

    afterEach(async () => {
      const db = useDb()
      await db.teardown()
    })

    it("includes default relations", async () => {
      const api = useApi()
      const response = await api.get("/store/products")

      expect(response.data).toMatchSnapshot({
        products: [
          {
            id: "test-product",
            variants: [
              {
                id: "test-variant",
                inventory_quantity: 10,
                title: "Test variant",
                sku: "test-sku",
                ean: "test-ean",
                upc: "test-upc",
                barcode: "test-barcode",
                product_id: "test-product",
                created_at: expect.any(String),
                updated_at: expect.any(String),
                product: {
                  id: "test-product",
                  profile_id: expect.stringMatching(/^sp_*/),
                  created_at: expect.any(String),
                  updated_at: expect.any(String),
                },
                prices: [
                  {
                    id: "test-money-amount",
                    created_at: expect.any(String),
                    updated_at: expect.any(String),
                  },
                ],
              },
            ],
            images: [
              {
                id: "test-image",
                created_at: expect.any(String),
                updated_at: expect.any(String),
              },
            ],
            handle: "test-product",
            title: "Test product",
            profile_id: expect.stringMatching(/^sp_*/),
            description: "test-product-description",
            collection_id: "test-collection",
            collection: {
              id: "test-collection",
              created_at: expect.any(String),
              updated_at: expect.any(String),
            },
            type: {
              id: "test-type",
              created_at: expect.any(String),
              updated_at: expect.any(String),
            },
            tags: [
              {
                id: "tag1",
                created_at: expect.any(String),
                updated_at: expect.any(String),
              },
            ],
            options: [
              {
                id: "test-option",
                values: [
                  {
                    id: "test-option-value_1",
                    value: "test-option-value_1",
                    option_id: "test-option",
                    variant_id: "test-variant",
                    metadata: null,
                    deleted_at: null,
                    created_at: expect.any(String),
                    updated_at: expect.any(String),
                  },
                  {
                    id: "test-option-value_2",
                    value: "test-option-value_2",
                    option_id: "test-option",
                    variant_id: "test-variant",
                    metadata: null,
                    deleted_at: null,
                    created_at: expect.any(String),
                    updated_at: expect.any(String),
                  },
                ],
                created_at: expect.any(String),
                updated_at: expect.any(String),
              },
            ],
            created_at: expect.any(String),
            updated_at: expect.any(String),
          },
        ],
      })
    })
  })

  describe("/store/products/:id", () => {
    beforeEach(async () => {
      try {
        await productSeeder(dbConnection)
      } catch (err) {
        console.log(err)
        throw err
      }
    })

    afterEach(async () => {
      const db = useDb()
      await db.teardown()
    })

    it("includes default relations", async () => {
      const api = useApi()

      const response = await api.get("/store/products/test-product")

      expect(response.data).toMatchSnapshot({
        product: {
          id: "test-product",
          variants: [
            {
              id: "test-variant",
              inventory_quantity: 10,
              title: "Test variant",
              sku: "test-sku",
              ean: "test-ean",
              upc: "test-upc",
              barcode: "test-barcode",
              product_id: "test-product",
              created_at: expect.any(String),
              updated_at: expect.any(String),
              product: {
                id: "test-product",
                profile_id: expect.stringMatching(/^sp_*/),
                created_at: expect.any(String),
                updated_at: expect.any(String),
              },
              prices: [
                {
                  id: "test-money-amount",
                  created_at: expect.any(String),
                  updated_at: expect.any(String),
                },
              ],
            },
          ],
          images: [
            {
              id: "test-image",
              created_at: expect.any(String),
              updated_at: expect.any(String),
            },
          ],
          handle: "test-product",
          title: "Test product",
          profile_id: expect.stringMatching(/^sp_*/),
          description: "test-product-description",
          collection_id: "test-collection",
          collection: {
            id: "test-collection",
            created_at: expect.any(String),
            updated_at: expect.any(String),
          },
          type: {
            id: "test-type",
            created_at: expect.any(String),
            updated_at: expect.any(String),
          },
          tags: [
            {
              id: "tag1",
              created_at: expect.any(String),
              updated_at: expect.any(String),
            },
          ],
          options: [
            {
              id: "test-option",
              values: [
                {
                  id: "test-option-value_1",
                  value: "test-option-value_1",
                  option_id: "test-option",
                  variant_id: "test-variant",
                  metadata: null,
                  deleted_at: null,
                  created_at: expect.any(String),
                  updated_at: expect.any(String),
                },
                {
                  id: "test-option-value_2",
                  value: "test-option-value_2",
                  option_id: "test-option",
                  variant_id: "test-variant",
                  metadata: null,
                  deleted_at: null,
                  created_at: expect.any(String),
                  updated_at: expect.any(String),
                },
              ],
              created_at: expect.any(String),
              updated_at: expect.any(String),
            },
          ],
          created_at: expect.any(String),
          updated_at: expect.any(String),
        },
      })
    })
  })
})
